Wrap the jlink runtime in jpackage via --runtime-image.
When jlink is enabled alongside packaging, the jpackage step now depends on
the jlink step, detects its runtime/ output, and bundles it with
--runtime-image (dropping --module-path in modular mode, since the module is
already linked in) instead of letting jpackage link its own runtime. This is
the only path by which a jmod's config/libs/cmds reach a packaged app image.

The custom-jmod demo now enables packaging, declares an @jenesis.main, and
launches the produced image, whose app reads its config back from the bundled
runtime's conf/. Demos that configure a Project explicitly no longer call
resolveProperties, which would let system properties override that config.